src/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    import
    private
    Scanner
    CHAR
    nextInt
    next
    STRING
    protected
    final
    then
    new
    nextDouble
    println
    nextFloat

Grammar

Rule 0     S' -> class_declaration
Rule 1     class_declaration -> public class ID LBRACE field_declaration cont_field RBRACE
Rule 2     cont_field -> field_declaration cont_field
Rule 3     cont_field -> <empty>
Rule 4     field_declaration -> method_declaration
Rule 5     field_declaration -> constructor_declaration
Rule 6     field_declaration -> variable_declaration
Rule 7     field_declaration -> static statement_block
Rule 8     field_declaration -> SEMICOLON
Rule 9     constructor_declaration -> public ID LPAREN parameter_list RPAREN statement_block
Rule 10    constructor_declaration -> public ID LPAREN RPAREN statement_block
Rule 11    method_declaration -> public type ID LPAREN parameter_list RPAREN statement_block
Rule 12    method_declaration -> public type ID LPAREN RPAREN statement_block
Rule 13    method_declaration -> public type ID LPAREN parameter_list RPAREN SEMICOLON
Rule 14    method_declaration -> public type ID LPAREN RPAREN SEMICOLON
Rule 15    method_declaration -> public static void main LPAREN String LBRACKET RBRACKET ID RPAREN statement_block
Rule 16    statement_block -> LBRACE statement statement_cont RBRACE
Rule 17    statement_cont -> statement statement_cont
Rule 18    statement_cont -> <empty>
Rule 19    statement -> variable_declaration
Rule 20    statement -> expression SEMICOLON
Rule 21    statement -> statement_block
Rule 22    statement -> if_statement
Rule 23    statement -> for_statement
Rule 24    statement -> return expression SEMICOLON
Rule 25    statement -> return SEMICOLON
Rule 26    statement -> ID COLON statement
Rule 27    statement -> break ID SEMICOLON
Rule 28    statement -> break SEMICOLON
Rule 29    statement -> continue ID SEMICOLON
Rule 30    statement -> continue SEMICOLON
Rule 31    statement -> SEMICOLON
Rule 32    variable_declaration -> public type variable_declarator cont_var_dec
Rule 33    variable_declaration -> type variable_declarator cont_var_dec
Rule 34    cont_var_dec -> COMMA variable_declarator cont_var_dec
Rule 35    cont_var_dec -> SEMICOLON
Rule 36    variable_declarator -> ID LBRACKET RBRACKET cont_var_declarator
Rule 37    variable_declarator -> ID cont_var_declarator
Rule 38    cont_var_declarator -> EQUAL variable_initializer
Rule 39    cont_var_declarator -> <empty>
Rule 40    variable_initializer -> expression
Rule 41    expression -> numeric_expression
Rule 42    expression -> testing_expression
Rule 43    expression -> ID
Rule 44    expression -> REAL_NUMBER
Rule 45    expression -> NUMBER
Rule 46    expression -> LPAREN expression RPAREN
Rule 47    expression -> expression LPAREN exp_cont RPAREN
Rule 48    exp_cont -> arglist
Rule 49    exp_cont -> <empty>
Rule 50    numeric_expression -> MINUS expression
Rule 51    numeric_expression -> DBPLUS expression
Rule 52    numeric_expression -> DBMINUS expression
Rule 53    numeric_expression -> expression DBPLUS
Rule 54    numeric_expression -> expression DBMINUS
Rule 55    numeric_expression -> expression operator expression
Rule 56    operator -> MINUS
Rule 57    operator -> PLUS
Rule 58    operator -> DIVIDE
Rule 59    operator -> MODULO
Rule 60    operator -> TIMES
Rule 61    operator -> PLEQUAL
Rule 62    operator -> MIEQUAL
Rule 63    operator -> MTEQUAL
Rule 64    operator -> DIEQUAL
Rule 65    operator -> MOEQUAL
Rule 66    operator -> EQUAL
Rule 67    type -> type_specifier
Rule 68    type_specifier -> boolean
Rule 69    type_specifier -> byte
Rule 70    type_specifier -> void
Rule 71    type_specifier -> char
Rule 72    type_specifier -> short
Rule 73    type_specifier -> int
Rule 74    type_specifier -> float
Rule 75    type_specifier -> long
Rule 76    type_specifier -> double
Rule 77    type_specifier -> class_name
Rule 78    class_name -> ID
Rule 79    arglist -> expression cont_arglist
Rule 80    cont_arglist -> COMMA expression cont_arglist
Rule 81    cont_arglist -> <empty>
Rule 82    testing_expression -> expression GT expression
Rule 83    testing_expression -> expression LT expression
Rule 84    testing_expression -> expression GTE expression
Rule 85    testing_expression -> expression LTE expression
Rule 86    testing_expression -> expression DBEQUAL expression
Rule 87    testing_expression -> expression NEQUAL expression
Rule 88    parameter_list -> parameter cont_param
Rule 89    cont_param -> COMMA parameter cont_param
Rule 90    cont_param -> <empty>
Rule 91    parameter -> type ID
Rule 92    parameter -> type ID LBRACKET RBRACKET
Rule 93    if_statement -> if LPAREN if_part_1 RPAREN statement action1
Rule 94    if_statement -> if LPAREN if_part_1 RPAREN statement action1 else statement action2
Rule 95    if_part_1 -> expression
Rule 96    action1 -> <empty>
Rule 97    action2 -> <empty>
Rule 98    for_statement -> for LPAREN for_part_1 for_part_2 SEMICOLON for_part_3 RPAREN statement
Rule 99    for_part_1 -> variable_declaration
Rule 100   for_part_1 -> expression SEMICOLON
Rule 101   for_part_1 -> SEMICOLON
Rule 102   for_part_2 -> expression
Rule 103   for_part_2 -> <empty>
Rule 104   for_part_3 -> expression
Rule 105   for_part_3 -> <empty>

Terminals, with rules where they appear

CHAR                 : 
COLON                : 26
COMMA                : 34 80 89
DBEQUAL              : 86
DBMINUS              : 52 54
DBPLUS               : 51 53
DIEQUAL              : 64
DIVIDE               : 58
EQUAL                : 38 66
GT                   : 82
GTE                  : 84
ID                   : 1 9 10 11 12 13 14 15 26 27 29 36 37 43 78 91 92
LBRACE               : 1 16
LBRACKET             : 15 36 92
LPAREN               : 9 10 11 12 13 14 15 46 47 93 94 98
LT                   : 83
LTE                  : 85
MIEQUAL              : 62
MINUS                : 50 56
MODULO               : 59
MOEQUAL              : 65
MTEQUAL              : 63
NEQUAL               : 87
NUMBER               : 45
PLEQUAL              : 61
PLUS                 : 57
RBRACE               : 1 16
RBRACKET             : 15 36 92
REAL_NUMBER          : 44
RPAREN               : 9 10 11 12 13 14 15 46 47 93 94 98
SEMICOLON            : 8 13 14 20 24 25 27 28 29 30 31 35 98 100 101
STRING               : 
Scanner              : 
String               : 15
TIMES                : 60
boolean              : 68
break                : 27 28
byte                 : 69
char                 : 71
class                : 1
continue             : 29 30
double               : 76
else                 : 94
error                : 
final                : 
float                : 74
for                  : 98
if                   : 93 94
import               : 
int                  : 73
long                 : 75
main                 : 15
new                  : 
next                 : 
nextDouble           : 
nextFloat            : 
nextInt              : 
println              : 
private              : 
protected            : 
public               : 1 9 10 11 12 13 14 15 32
return               : 24 25
short                : 72
static               : 7 15
then                 : 
void                 : 15 70

Nonterminals, with rules where they appear

action1              : 93 94
action2              : 94
arglist              : 48
class_declaration    : 0
class_name           : 77
constructor_declaration : 5
cont_arglist         : 79 80
cont_field           : 1 2
cont_param           : 88 89
cont_var_dec         : 32 33 34
cont_var_declarator  : 36 37
exp_cont             : 47
expression           : 20 24 40 46 47 50 51 52 53 54 55 55 79 80 82 82 83 83 84 84 85 85 86 86 87 87 95 100 102 104
field_declaration    : 1 2
for_part_1           : 98
for_part_2           : 98
for_part_3           : 98
for_statement        : 23
if_part_1            : 93 94
if_statement         : 22
method_declaration   : 4
numeric_expression   : 41
operator             : 55
parameter            : 88 89
parameter_list       : 9 11 13
statement            : 16 17 26 93 94 94 98
statement_block      : 7 9 10 11 12 15 21
statement_cont       : 16 17
testing_expression   : 42
type                 : 11 12 13 14 32 33 91 92
type_specifier       : 67
variable_declaration : 6 19 99
variable_declarator  : 32 33 34
variable_initializer : 38

Parsing method: LALR

state 0

    (0) S' -> . class_declaration
    (1) class_declaration -> . public class ID LBRACE field_declaration cont_field RBRACE

    public          shift and go to state 1

    class_declaration              shift and go to state 2

state 1

    (1) class_declaration -> public . class ID LBRACE field_declaration cont_field RBRACE

    class           shift and go to state 3


state 2

    (0) S' -> class_declaration .



state 3

    (1) class_declaration -> public class . ID LBRACE field_declaration cont_field RBRACE

    ID              shift and go to state 4


state 4

    (1) class_declaration -> public class ID . LBRACE field_declaration cont_field RBRACE

    LBRACE          shift and go to state 5


state 5

    (1) class_declaration -> public class ID LBRACE . field_declaration cont_field RBRACE
    (4) field_declaration -> . method_declaration
    (5) field_declaration -> . constructor_declaration
    (6) field_declaration -> . variable_declaration
    (7) field_declaration -> . static statement_block
    (8) field_declaration -> . SEMICOLON
    (11) method_declaration -> . public type ID LPAREN parameter_list RPAREN statement_block
    (12) method_declaration -> . public type ID LPAREN RPAREN statement_block
    (13) method_declaration -> . public type ID LPAREN parameter_list RPAREN SEMICOLON
    (14) method_declaration -> . public type ID LPAREN RPAREN SEMICOLON
    (15) method_declaration -> . public static void main LPAREN String LBRACKET RBRACKET ID RPAREN statement_block
    (9) constructor_declaration -> . public ID LPAREN parameter_list RPAREN statement_block
    (10) constructor_declaration -> . public ID LPAREN RPAREN statement_block
    (32) variable_declaration -> . public type variable_declarator cont_var_dec
    (33) variable_declaration -> . type variable_declarator cont_var_dec
    (67) type -> . type_specifier
    (68) type_specifier -> . boolean
    (69) type_specifier -> . byte
    (70) type_specifier -> . void
    (71) type_specifier -> . char
    (72) type_specifier -> . short
    (73) type_specifier -> . int
    (74) type_specifier -> . float
    (75) type_specifier -> . long
    (76) type_specifier -> . double
    (77) type_specifier -> . class_name
    (78) class_name -> . ID

    static          shift and go to state 9
    SEMICOLON       shift and go to state 12
    public          shift and go to state 17
    boolean         shift and go to state 8
    byte            shift and go to state 23
    void            shift and go to state 19
    char            shift and go to state 22
    short           shift and go to state 20
    int             shift and go to state 6
    float           shift and go to state 7
    long            shift and go to state 15
    double          shift and go to state 24
    ID              shift and go to state 21

    type_specifier                 shift and go to state 11
    class_name                     shift and go to state 18
    constructor_declaration        shift and go to state 13
    method_declaration             shift and go to state 14
    field_declaration              shift and go to state 25
    type                           shift and go to state 16
    variable_declaration           shift and go to state 10

state 6

    (73) type_specifier -> int .

    ID              reduce using rule 73 (type_specifier -> int .)


state 7

    (74) type_specifier -> float .

    ID              reduce using rule 74 (type_specifier -> float .)


state 8

    (68) type_specifier -> boolean .

    ID              reduce using rule 68 (type_specifier -> boolean .)


state 9

    (7) field_declaration -> static . statement_block
    (16) statement_block -> . LBRACE statement statement_cont RBRACE

    LBRACE          shift and go to state 26

    statement_block                shift and go to state 27

state 10

    (6) field_declaration -> variable_declaration .

    static          reduce using rule 6 (field_declaration -> variable_declaration .)
    SEMICOLON       reduce using rule 6 (field_declaration -> variable_declaration .)
    public          reduce using rule 6 (field_declaration -> variable_declaration .)
    boolean         reduce using rule 6 (field_declaration -> variable_declaration .)
    byte            reduce using rule 6 (field_declaration -> variable_declaration .)
    void            reduce using rule 6 (field_declaration -> variable_declaration .)
    char            reduce using rule 6 (field_declaration -> variable_declaration .)
    short           reduce using rule 6 (field_declaration -> variable_declaration .)
    int             reduce using rule 6 (field_declaration -> variable_declaration .)
    float           reduce using rule 6 (field_declaration -> variable_declaration .)
    long            reduce using rule 6 (field_declaration -> variable_declaration .)
    double          reduce using rule 6 (field_declaration -> variable_declaration .)
    ID              reduce using rule 6 (field_declaration -> variable_declaration .)
    RBRACE          reduce using rule 6 (field_declaration -> variable_declaration .)


state 11

    (67) type -> type_specifier .

    ID              reduce using rule 67 (type -> type_specifier .)


state 12

    (8) field_declaration -> SEMICOLON .

    static          reduce using rule 8 (field_declaration -> SEMICOLON .)
    SEMICOLON       reduce using rule 8 (field_declaration -> SEMICOLON .)
    public          reduce using rule 8 (field_declaration -> SEMICOLON .)
    boolean         reduce using rule 8 (field_declaration -> SEMICOLON .)
    byte            reduce using rule 8 (field_declaration -> SEMICOLON .)
    void            reduce using rule 8 (field_declaration -> SEMICOLON .)
    char            reduce using rule 8 (field_declaration -> SEMICOLON .)
    short           reduce using rule 8 (field_declaration -> SEMICOLON .)
    int             reduce using rule 8 (field_declaration -> SEMICOLON .)
    float           reduce using rule 8 (field_declaration -> SEMICOLON .)
    long            reduce using rule 8 (field_declaration -> SEMICOLON .)
    double          reduce using rule 8 (field_declaration -> SEMICOLON .)
    ID              reduce using rule 8 (field_declaration -> SEMICOLON .)
    RBRACE          reduce using rule 8 (field_declaration -> SEMICOLON .)


state 13

    (5) field_declaration -> constructor_declaration .

    static          reduce using rule 5 (field_declaration -> constructor_declaration .)
    SEMICOLON       reduce using rule 5 (field_declaration -> constructor_declaration .)
    public          reduce using rule 5 (field_declaration -> constructor_declaration .)
    boolean         reduce using rule 5 (field_declaration -> constructor_declaration .)
    byte            reduce using rule 5 (field_declaration -> constructor_declaration .)
    void            reduce using rule 5 (field_declaration -> constructor_declaration .)
    char            reduce using rule 5 (field_declaration -> constructor_declaration .)
    short           reduce using rule 5 (field_declaration -> constructor_declaration .)
    int             reduce using rule 5 (field_declaration -> constructor_declaration .)
    float           reduce using rule 5 (field_declaration -> constructor_declaration .)
    long            reduce using rule 5 (field_declaration -> constructor_declaration .)
    double          reduce using rule 5 (field_declaration -> constructor_declaration .)
    ID              reduce using rule 5 (field_declaration -> constructor_declaration .)
    RBRACE          reduce using rule 5 (field_declaration -> constructor_declaration .)


state 14

    (4) field_declaration -> method_declaration .

    static          reduce using rule 4 (field_declaration -> method_declaration .)
    SEMICOLON       reduce using rule 4 (field_declaration -> method_declaration .)
    public          reduce using rule 4 (field_declaration -> method_declaration .)
    boolean         reduce using rule 4 (field_declaration -> method_declaration .)
    byte            reduce using rule 4 (field_declaration -> method_declaration .)
    void            reduce using rule 4 (field_declaration -> method_declaration .)
    char            reduce using rule 4 (field_declaration -> method_declaration .)
    short           reduce using rule 4 (field_declaration -> method_declaration .)
    int             reduce using rule 4 (field_declaration -> method_declaration .)
    float           reduce using rule 4 (field_declaration -> method_declaration .)
    long            reduce using rule 4 (field_declaration -> method_declaration .)
    double          reduce using rule 4 (field_declaration -> method_declaration .)
    ID              reduce using rule 4 (field_declaration -> method_declaration .)
    RBRACE          reduce using rule 4 (field_declaration -> method_declaration .)


state 15

    (75) type_specifier -> long .

    ID              reduce using rule 75 (type_specifier -> long .)


state 16

    (33) variable_declaration -> type . variable_declarator cont_var_dec
    (36) variable_declarator -> . ID LBRACKET RBRACKET cont_var_declarator
    (37) variable_declarator -> . ID cont_var_declarator

    ID              shift and go to state 29

    variable_declarator            shift and go to state 28

state 17

    (11) method_declaration -> public . type ID LPAREN parameter_list RPAREN statement_block
    (12) method_declaration -> public . type ID LPAREN RPAREN statement_block
    (13) method_declaration -> public . type ID LPAREN parameter_list RPAREN SEMICOLON
    (14) method_declaration -> public . type ID LPAREN RPAREN SEMICOLON
    (15) method_declaration -> public . static void main LPAREN String LBRACKET RBRACKET ID RPAREN statement_block
    (9) constructor_declaration -> public . ID LPAREN parameter_list RPAREN statement_block
    (10) constructor_declaration -> public . ID LPAREN RPAREN statement_block
    (32) variable_declaration -> public . type variable_declarator cont_var_dec
    (67) type -> . type_specifier
    (68) type_specifier -> . boolean
    (69) type_specifier -> . byte
    (70) type_specifier -> . void
    (71) type_specifier -> . char
    (72) type_specifier -> . short
    (73) type_specifier -> . int
    (74) type_specifier -> . float
    (75) type_specifier -> . long
    (76) type_specifier -> . double
    (77) type_specifier -> . class_name
    (78) class_name -> . ID

    static          shift and go to state 30
    ID              shift and go to state 32
    boolean         shift and go to state 8
    byte            shift and go to state 23
    void            shift and go to state 19
    char            shift and go to state 22
    short           shift and go to state 20
    int             shift and go to state 6
    float           shift and go to state 7
    long            shift and go to state 15
    double          shift and go to state 24

    type_specifier                 shift and go to state 11
    class_name                     shift and go to state 18
    type                           shift and go to state 31

state 18

    (77) type_specifier -> class_name .

    ID              reduce using rule 77 (type_specifier -> class_name .)


state 19

    (70) type_specifier -> void .

    ID              reduce using rule 70 (type_specifier -> void .)


state 20

    (72) type_specifier -> short .

    ID              reduce using rule 72 (type_specifier -> short .)


state 21

    (78) class_name -> ID .

    ID              reduce using rule 78 (class_name -> ID .)


state 22

    (71) type_specifier -> char .

    ID              reduce using rule 71 (type_specifier -> char .)


state 23

    (69) type_specifier -> byte .

    ID              reduce using rule 69 (type_specifier -> byte .)


state 24

    (76) type_specifier -> double .

    ID              reduce using rule 76 (type_specifier -> double .)


state 25
